--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -19,6 +19,11 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+    
+    App\Command\Handler\:
+        autoconfigure: false
+        resource: '../src/Command/Handler'
+        tags: [{ name: messenger.message_handler, bus: command.bus }]
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
