adding terraform infra

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,11 +38,11 @@ jobs:
           cd infra
           terraform init -input=false -backend-config=backend.hcl
 
-      # - name: Terraform validation
-      #   run: terraform validate
+      - name: Terraform validation
+        run: terraform validate -var-file=terraform.tfvars
 
-      # - name: Terraform apply
-      #   env:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #   run: terraform apply -auto-approve -input=false
+      - name: Terraform apply
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: terraform apply -var-file=terraform.tfvars -auto-approve -input=false
