--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,14 @@ jobs:
           terraform init -input=false -backend-config=backend.hcl
 
       - name: Terraform validation
-        run: terraform validate -var-file=terraform.tfvars
+        run: |
+          cd infra
+          terraform validate -var-file=terraform.tfvars
 
       - name: Terraform apply
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: terraform apply -var-file=terraform.tfvars -auto-approve -input=false
+        run: |
+          cd infra
+          terraform apply -var-file=terraform.tfvars -auto-approve -input=false
