--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     container_name: php
     build:
       context: ./php
+    environment:
+      DATABASE_URL: mysql://symfony:symfony@database:3306/symfony_docker?serverVersion=8
     ports:
       - '9000:9000'
     volumes:
