--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -47,4 +47,4 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           cd infra
-          terraform apply -var-file=terraform.tfvars -auto-approve -input=false
+          terraform destroy -var-file=terraform.tfvars -auto-approve -input=false
