--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: clientes-default           # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: clientes-php-default           # set this to your Amazon ECR repository name
   ECS_SERVICE: clientes-default                 # set this to your Amazon ECS service name
   ECS_CLUSTER: clientes-default                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: infra/ecs/task-definitions/api-task.json # set this to the path to your Amazon ECS task definition file, e.g. .aws/task-definition.json
