--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,12 +30,16 @@ services:
   
   nginx:
     container_name: nginx
-    image: nginx:stable-alpine
+    build:
+      context: ./nginx
     ports:
       - '8080:80'
     volumes:
       - ./app:/var/www/symfony_docker
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf.template:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
       - database
+    environment:
+      - API_HOST=php
+      - API_PORT=9000
