--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -18,7 +18,7 @@ server {
         root /app/public;
 
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass ${API_HOST}:${API_PORT};
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param HTTPS off;
         include fastcgi_params;
