--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -17,4 +17,4 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 RUN curl -sS https://get.symfony.com/cli/installer | bash
 RUN mv /root/.symfony/bin/symfony /usr/local/bin/symfony
 
-#CMD php-fpm
+CMD php-fpm
