--- a/app/docker/nginx/default.conf.template
+++ b/app/docker/nginx/default.conf.template
@@ -25,6 +25,21 @@ server {
         fastcgi_buffers 16 16k; 
         fastcgi_buffer_size 32k;
 
+        gzip on;
+        gzip_disable "msie6";
+        gzip_vary on;
+        gzip_proxied any;
+        gzip_comp_level 6;
+        gzip_min_length 1100;
+        gzip_buffers 16 8k;
+        gzip_http_version 1.1;
+        gzip_types text/plain application/javascript application/json application/x-javascript text/xml text/css;
+        
+        open_file_cache max=2000 inactive=20s;
+        open_file_cache_valid 60s;
+        open_file_cache_min_uses 5;
+        open_file_cache_errors off;
+
         # Prevents URIs that include the front controller. This will 404:
         # http://domain.tld/index.php/some-path
         # Enable the internal directive to disable URIs like this
