--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -15,6 +15,7 @@ on:
 jobs:
   terraform_apply:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - uses: actions/checkout@v1
       - name: Install Terraform
