adding database env arg

--- a/app/docker/php-fpm/Dockerfile
+++ b/app/docker/php-fpm/Dockerfile
@@ -7,6 +7,7 @@ ARG APP_URL
 ARG EXCEPTION_LISTENER_MODE
 ARG INFRA_ENVIRONMENT
 ARG SYMFONY_DECRYPTION_SECRET
+ARG DATABASE_URL
 
 ENV APP_ENV $APP_ENV
 ENV APP_DEBUG $APP_DEBUG
@@ -15,6 +16,7 @@ ENV APP_URL $APP_URL
 ENV EXCEPTION_LISTENER_MODE $EXCEPTION_LISTENER_MODE
 ENV INFRA_ENVIRONMENT $INFRA_ENVIRONMENT
 ENV SYMFONY_DECRYPTION_SECRET $SYMFONY_DECRYPTION_SECRET
+ENV DATABASE_URL $DATABASE_URL
 
 ENV COMPOSER_ALLOW_SUPERUSER="1"
 ENV PATH="/app/bin:/app/vendor/bin:${PATH}"
