--- a/app/docker/nginx/Dockerfile
+++ b/app/docker/nginx/Dockerfile
@@ -1,17 +1,10 @@
-ARG PHP_IMAGE=tcc-clientes_php
-ARG PHP_IMAGE_TAG=latest
-
-FROM ${PHP_IMAGE}:${PHP_IMAGE_TAG} as assets
-
-RUN mkdir -p public
-
 FROM nginx:1.17.10-alpine
 
 COPY docker/nginx/default.conf.template /etc/nginx/conf.d/default.conf.template
 
 COPY docker/nginx/docker-entrypoint.prod.sh /docker-entrypoint.sh
 
-COPY --from=assets /app/public /var/www/app/public
+COPY ./public /var/www/app/public
 
 RUN chmod +x /docker-entrypoint.sh
 
