--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ env:
   ECR_WEBSERVER_REPOSITORY: clientes-nginx-default
   ECS_SERVICE: clientes-default                 # set this to your Amazon ECS service name
   ECS_CLUSTER: clientes-default                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: infra/ecs/task-definitions/api-task.json # set this to the path to your Amazon ECS task definition file, e.g. .aws/task-definition.json
+  ECS_TASK_DEFINITION_NAME: clientes-default_app
+  # ECS_TASK_DEFINITION: infra/ecs/task-definitions/api-task.json # set this to the path to your Amazon ECS task definition file, e.g. .aws/task-definition.json
   CONTAINER_NAME: clientes           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
@@ -59,26 +60,55 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_WEBSERVER_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image_webserver::$ECR_REGISTRY/$ECR_WEBSERVER_REPOSITORY:$IMAGE_TAG"
 
-      - name: Updating webserver image on taskdef
-        id: task-def-webserver
-        uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
-        with:
-          task-definition: ${{ env.ECS_TASK_DEFINITION }}
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ steps.build-image.outputs.image_webserver }}
-
-      - name: Updating application image on taskdef
+      - name: Updating application images
         id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
-        with:
-          task-definition: ${{ env.ECS_TASK_DEFINITION }}
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ steps.build-image.outputs.image }}
+        runs-on: alpine:3.13
+        env:
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+        run: |
+          apk --no-cache add ca-certificates curl bash jq py3-pip
+          pip install awscli
+          aws ecr get-login-password --region $AWS_REGION
+          curl https://raw.githubusercontent.com/silinternational/ecs-deploy/master/ecs-deploy -o /bin/ecs-deploy
+          chmod +x /bin/ecs-deploy
+          ecs-deploy
+            --region $AWS_REGION
+            --cluster arn:aws:ecs:$AWS_REGION:$AWS_ACCOUNT_ID:cluster/${ECS_CLUSTER}
+            --task-definition ${ECS_TASK_DEFINITION_NAME}
+            --image ${{ steps.build-image.outputs.image }}
+            --timeout 600
+            --min 100
+            --max 200
+          ecs-deploy
+            --region $AWS_REGION
+            --cluster arn:aws:ecs:$AWS_REGION:$AWS_ACCOUNT_ID:cluster/${ECS_CLUSTER}
+            --service-name scd-il-dda-${DRONE_SOURCE_BRANCH}
+            --use-latest-task-def
+            --image ${{ steps.build-image.outputs.image_webserver }}
+            --timeout 600
+            --min 100
+            --max 200
+
+      # - name: Updating webserver image on taskdef
+      #   id: task-def-webserver
+      #   uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
+      #   with:
+      #     task-definition: ${{ env.ECS_TASK_DEFINITION }}
+      #     container-name: ${{ env.CONTAINER_NAME }}
+      #     image: ${{ steps.build-image.outputs.image_webserver }}
+
+      # - name: Updating application image on taskdef
+      #   id: task-def
+      #   uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
+      #   with:
+      #     task-definition: ${{ env.ECS_TASK_DEFINITION }}
+      #     container-name: ${{ env.CONTAINER_NAME }}
+      #     image: ${{ steps.build-image.outputs.image }}
       
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE }}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
+      # - name: Deploy Amazon ECS task definition
+      #   uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
+      #   with:
+      #     task-definition: ${{ steps.task-def.outputs.task-definition }}
+      #     service: ${{ env.ECS_SERVICE }}
+      #     cluster: ${{ env.ECS_CLUSTER }}
+      #     wait-for-service-stability: true
