--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Updating application images
         id: task-def
         run: |
-          apt install awscli
+          sudo apt install awscli
           aws ecr get-login-password --region $AWS_REGION
           curl https://raw.githubusercontent.com/silinternational/ecs-deploy/master/ecs-deploy -o /bin/ecs-deploy
           chmod +x /bin/ecs-deploy
