--- a/app/composer.json
+++ b/app/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "koco/messenger-kafka": "^0.17.0",
         "ramsey/uuid-doctrine": "^1.8",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
@@ -68,6 +69,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "consumer": [
+            "console messenger:consume consumer --time-limit=300 -vvv --no-interaction"
         ]
     },
     "conflict": {
