--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     environment:
       DATABASE_URL: mysql://symfony:symfony@database:3306/symfony_docker?serverVersion=8
       KAFKA_URL: kafka://kafka:29092
+      S3_BUCKET: bi-tcc
+      S3_ENDPOINT: http://s3local
     ports:
       - '9000:9000'
     volumes:
@@ -42,6 +44,38 @@ services:
     depends_on:
       - database
       - kafka
+      - s3local
+  
+  # php_consumer:
+  #   image: poc_php_consumer
+  #   build:
+  #     context: ./app
+  #     dockerfile: ./docker/php-fpm/Dockerfile
+  #     target: dev
+  #     args:
+  #       - XDEBUG_REMOTE_HOST=${XDEBUG_REMOTE_HOST:-172.17.0.1} # No Mac, substituir por: host.docker.internal
+  #       - DB_SERVER=database
+  #       - DB_PORT=3306
+  #       - DB_NAME=symfony_docker
+  #       - DB_USER=symfony
+  #       - DB_PASSWORD=symfony
+  #       - INFRA_ENVIRONMENT=dev
+  #       - APP_ENV=dev
+  #       - APP_DEBUG=1
+  #       - DEPLOY_CMD=composer consumer
+  #   environment:
+  #     WAIT_HOSTS: kafka:29092, database:3306
+  #     DATABASE_URL: mysql://symfony:symfony@database:3306/symfony_docker?serverVersion=8
+  #     KAFKA_URL: kafka://kafka:29092      
+  #     S3_BUCKET: bi-tcc
+  #     S3_ENDPOINT: http://s3local:8081
+  #   volumes:
+  #     - ./app:/app
+  #     - ./app/docker/php-fpm/php.dev.ini:/usr/local/etc/php/conf.d/extras-php.ini
+  #   depends_on:
+  #     - database
+  #     - kafka
+  #     - s3local
   
   nginx:
     image: poc_nginx
@@ -82,3 +116,12 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  s3local:
+    image: andrewgaul/s3proxy
+    ports:
+      - 8081:80
+    environment:
+      S3PROXY_AUTHORIZATION: none
+  
+  
