add kafka docker arg

--- a/app/docker/php-fpm/Dockerfile
+++ b/app/docker/php-fpm/Dockerfile
@@ -8,6 +8,7 @@ ARG EXCEPTION_LISTENER_MODE
 ARG INFRA_ENVIRONMENT
 ARG SYMFONY_DECRYPTION_SECRET
 ARG DATABASE_URL
+ARG KAFKA_URL
 
 ENV APP_ENV $APP_ENV
 ENV APP_DEBUG $APP_DEBUG
@@ -17,6 +18,7 @@ ENV EXCEPTION_LISTENER_MODE $EXCEPTION_LISTENER_MODE
 ENV INFRA_ENVIRONMENT $INFRA_ENVIRONMENT
 ENV SYMFONY_DECRYPTION_SECRET $SYMFONY_DECRYPTION_SECRET
 ENV DATABASE_URL $DATABASE_URL
+ENV KAFKA_URL $KAFKA_URL
 
 ENV COMPOSER_ALLOW_SUPERUSER="1"
 ENV PATH="/app/bin:/app/vendor/bin:${PATH}"
