--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
           DATABASE_URL: mysql://${{ secrets.DB_USERNAME }}:${{ secrets.DB_PASSWORD }}@${{ secrets.DB_HOST }}/clients?serverVersion=8
-          KAFKA_URL: kafka://${{secrets.KAFKA_HOST}}
+          KAFKA_URL: ${{secrets.KAFKA_HOST}}
         run: |
           # Build a docker container and
           # push it to ECR so that it can
