adding bucket s3 env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,12 +52,13 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
           DATABASE_URL: mysql://${{ secrets.DB_USERNAME }}:${{ secrets.DB_PASSWORD }}@${{ secrets.DB_HOST }}/clients?serverVersion=8
           KAFKA_URL: ${{secrets.KAFKA_HOST}}
+          S3_BUCKET: ${{secrets.S3_BUCKET}}
         run: |
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
           cd app/
-          docker build --build-arg DATABASE_URL=$DATABASE_URL --build-arg KAFKA_URL=$KAFKA_URL --build-arg APP_ENV=prod --build-arg APP_DEBUG=0 --build-arg INFRA_ENVIRONMENT=prod -f docker/php-fpm/Dockerfile --target prod -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build --build-arg DATABASE_URL=$DATABASE_URL --build-arg S3_BUCKET=$S3_BUCKET --build-arg KAFKA_URL=$KAFKA_URL --build-arg APP_ENV=prod --build-arg APP_DEBUG=0 --build-arg INFRA_ENVIRONMENT=prod -f docker/php-fpm/Dockerfile --target prod -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           docker build -f docker/nginx/Dockerfile --build-arg API_HOST=localhost --build-arg API_PORT=9000 -t $ECR_REGISTRY/$ECR_WEBSERVER_REPOSITORY:$IMAGE_TAG .
