adding s3 arg to dockerfile

--- a/app/docker/php-fpm/Dockerfile
+++ b/app/docker/php-fpm/Dockerfile
@@ -9,6 +9,7 @@ ARG INFRA_ENVIRONMENT
 ARG SYMFONY_DECRYPTION_SECRET
 ARG DATABASE_URL
 ARG KAFKA_URL
+ARG S3_BUCKET
 
 ENV APP_ENV $APP_ENV
 ENV APP_DEBUG $APP_DEBUG
@@ -19,6 +20,7 @@ ENV INFRA_ENVIRONMENT $INFRA_ENVIRONMENT
 ENV SYMFONY_DECRYPTION_SECRET $SYMFONY_DECRYPTION_SECRET
 ENV DATABASE_URL $DATABASE_URL
 ENV KAFKA_URL $KAFKA_URL
+ENV S3_BUCKET $S3_BUCKET
 
 ENV COMPOSER_ALLOW_SUPERUSER="1"
 ENV PATH="/app/bin:/app/vendor/bin:${PATH}"
