--- a/app/config/packages/messenger.yaml
+++ b/app/config/packages/messenger.yaml
@@ -59,4 +59,4 @@ framework:
 
         routing:
             # Route your messages to the transports
-            'App\Domain\Event\ClientCreated': producer
+            # 'App\Domain\Event\ClientCreated': producer
